--- a/suvinil-produtos.html
+++ b/suvinil-produtos.html
@@ -43,7 +43,7 @@
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Elétrica <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Elétrica<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Fios e Cabos</a></li>
                                 <li><a href="#">Tomadas e Interruptores</a></li>
@@ -53,70 +53,65 @@
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Argamassa <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Argamassa<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
+                                <li><a href="#">Areia</a></li>
                                 <li><a href="#">Argamassa AC-I</a></li>
                                 <li><a href="#">Argamassa AC-II</a></li>
                                 <li><a href="#">Argamassa AC-III</a></li>
                                 <li><a href="#">Rejuntes</a></li>
-                                <li><a href="#">Aditivos e Impermeabilizantes</a></li>
+                                <li><a href="#">Impermeabilizantes</a></li>
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Tintas <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Linha Rezende<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
-                                <li><a href="#">Tinta Acrílica</a></li>
-                                <li><a href="#">Tinta Látex</a></li>
-                                <li><a href="#">Esmaltes e Vernizes</a></li>
-                                <li><a href="#">Texturas e Efeitos</a></li>
-                                <li><a href="#">Acessórios para Pintura</a></li>
+                                <li><a href="#">Areia</a></li>
+                                <li><a href="#">Massas</a></li>
+                                <li><a href="#">Tintas e Texturas</a></li>
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Hidráulica <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Hidráulica<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Tubos e Conexões PVC</a></li>
                                 <li><a href="#">Tubos e Conexões Cobre</a></li>
-                                <li><a href="#">Caixas d'Água</a></li>
                                 <li><a href="#">Registros e Válvulas</a></li>
-                                <li><a href="#">Aquecedores de Água</a></li>
                                 <li><a href="#">Bombas D'água</a></li>
                             </ul>
                         </div>
                          <div class="has-submenu">
-                            <a href="#">Adesivos <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Adesivos<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
-                                <li><a href="#">Colas para Madeira</a></li>
+                                <li><a href="#">Colas</a></li>
                                 <li><a href="#">Adesivos de Contato</a></li>
                                 <li><a href="#">Silicones e Selantes</a></li>
                                 <li><a href="#">Fitas Adesivas</a></li>
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Aquecedores <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Aquecedores<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Aquecedores a Gás</a></li>
                                 <li><a href="#">Aquecedores Elétricos</a></li>
-                                <li><a href="#">Aquecedores Solares</a></li>
-                                <li><a href="#">Boilers</a></li>
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Tigre <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Tigre<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
-                                <li><a href="#">Linha Água Fria Tigre</a></li>
-                                <li><a href="#">Linha Esgoto Tigre</a></li>
-                                <li><a href="#">Linha Eletricidade Tigre</a></li>
-                                <li><a href="#">Caixas D'água Tigre</a></li>
+                                <li><a href="#">Linha Tigre Pro</a></li>
+                                <li><a href="#">Tubos e conexões</a></li>
+                                <li><a href="#">Linha Eletrica</a></li>
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="suvinil-produtos.html">Suvinil <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="suvinil-produtos.html">Suvinil<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
-                                <li><a href="suvinil-produtos.html#acrilica">Tinta Acrílica Suvinil</a></li>
-                                <li><a href="suvinil-produtos.html#latex">Tinta Látex Suvinil</a></li>
+                                <li><a href="suvinil-produtos.html#acrilica">Tintas Select</a></li>
+                                <li><a href="suvinil-produtos.html#latex">Tintas Rende e Cobre Muito</a></li>
                                 <li><a href="suvinil-produtos.html#cores">Cores Personalizadas</a></li>
-                                <li><a href="suvinil-produtos.html#preparacao">Preparação de Superfícies</a></li>
+                                <li><a href="suvinil-produtos.html#preparacao">Linha Premium</a></li>
+                                <li><a href="suvinil-produtos.html#preparacao">Verniz Madeiras e Metais</a></li>
                             </ul>
                         </div>
                     </div>
@@ -191,7 +186,7 @@
             <section class="products-container">
                 <section class="page-title">
                     <h1>Produtos Suvinil</h1>
-                    <p>A Suvinil oferece a mais completa linha de tintas para você transformar seus ambientes com cores e qualidade.</p>
+                    <p>A Suvinil e Rezende uma parceria que vem há 30 anos realizando sonhos.</p>
                 </section>
 
                 <section class="product-grid">
