--- a/suvinil-produtos.html
+++ b/suvinil-produtos.html
@@ -49,16 +49,13 @@
                                 <li><a href="#">Tomadas e Interruptores</a></li>
                                 <li><a href="#">Iluminação</a></li>
                                 <li><a href="#">Disjuntores e Quadros</a></li>
-                                <li><a href="#">Ferramentas Elétricas</a></li>
                             </ul>
                         </div>
                         <div class="has-submenu">
                             <a href="#">Argamassa<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Areia</a></li>
-                                <li><a href="#">Argamassa AC-I</a></li>
-                                <li><a href="#">Argamassa AC-II</a></li>
-                                <li><a href="#">Argamassa AC-III</a></li>
+                                <li><a href="#">Argamassa</a></li>
                                 <li><a href="#">Rejuntes</a></li>
                                 <li><a href="#">Impermeabilizantes</a></li>
                             </ul>
@@ -74,8 +71,7 @@
                         <div class="has-submenu">
                             <a href="#">Hidráulica<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
-                                <li><a href="#">Tubos e Conexões PVC</a></li>
-                                <li><a href="#">Tubos e Conexões Cobre</a></li>
+                                <li><a href="#">Tubos e Conexões</a></li>
                                 <li><a href="#">Registros e Válvulas</a></li>
                                 <li><a href="#">Bombas D'água</a></li>
                             </ul>
@@ -90,8 +86,9 @@
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Aquecedores<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Banho e Aquecedores<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
+                                <li><a href="#">Chuveiros</a></li>
                                 <li><a href="#">Aquecedores a Gás</a></li>
                                 <li><a href="#">Aquecedores Elétricos</a></li>
                             </ul>
@@ -100,8 +97,7 @@
                             <a href="#">Tigre<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Linha Tigre Pro</a></li>
-                                <li><a href="#">Tubos e conexões</a></li>
-                                <li><a href="#">Linha Eletrica</a></li>
+                                <li><a href="#">Tubos e Conexões</a></li>
                             </ul>
                         </div>
                         <div class="has-submenu">
