--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
                             <a href="#">Descontos <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Ofertas do Dia</a></li>
-                                <li><a href="#">Liquidação</a></li>
-                                <li><a href="#">Cupons</a></li>
+                                <li><a href="#">Promoções</a></li>
                             </ul>
                         </div>
                         <div class="has-submenu">
@@ -49,16 +48,13 @@
                                 <li><a href="#">Tomadas e Interruptores</a></li>
                                 <li><a href="#">Iluminação</a></li>
                                 <li><a href="#">Disjuntores e Quadros</a></li>
-                                <li><a href="#">Ferramentas Elétricas</a></li>
                             </ul>
                         </div>
                         <div class="has-submenu">
                             <a href="#">Argamassa<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Areia</a></li>
-                                <li><a href="#">Argamassa AC-I</a></li>
-                                <li><a href="#">Argamassa AC-II</a></li>
-                                <li><a href="#">Argamassa AC-III</a></li>
+                                <li><a href="#">Argamassa</a></li>
                                 <li><a href="#">Rejuntes</a></li>
                                 <li><a href="#">Impermeabilizantes</a></li>
                             </ul>
@@ -74,8 +70,7 @@
                         <div class="has-submenu">
                             <a href="#">Hidráulica<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
-                                <li><a href="#">Tubos e Conexões PVC</a></li>
-                                <li><a href="#">Tubos e Conexões Cobre</a></li>
+                                <li><a href="#">Tubos e Conexões</a></li>
                                 <li><a href="#">Registros e Válvulas</a></li>
                                 <li><a href="#">Bombas D'água</a></li>
                             </ul>
@@ -90,8 +85,9 @@
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Aquecedores<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Banho e Aquecedores<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
+                                <li><a href="#">Chuveiros</a></li>
                                 <li><a href="#">Aquecedores a Gás</a></li>
                                 <li><a href="#">Aquecedores Elétricos</a></li>
                             </ul>
@@ -100,8 +96,7 @@
                             <a href="#">Tigre<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Linha Tigre Pro</a></li>
-                                <li><a href="#">Tubos e conexões</a></li>
-                                <li><a href="#">Linha Eletrica</a></li>
+                                <li><a href="#">Tubos e Conexões</a></li>
                             </ul>
                         </div>
                         <div class="has-submenu">
@@ -146,22 +141,22 @@
             <div class="category-card common-card-styles">
                 <img src="https://images.tcdn.com.br/img/img_prod/1134831/misturador_monocomando_lift_docol_51_1_f119439d9f8458249c3a4bc774bba811.png" alt="Categoria Torneiras">
                 <div class="card-info">
-                    <h3>TORNEIRAS</h3>
-                    <p>Linha Premium</p>
+                    <h3>ACABAMENTOS</h3>
+                    <p>Conheça Nossa Linha Premium</p>
                 </div>
             </div>
             <a href="suvinil-produtos.html" class="category-card common-card-styles">
                 <img src="https://imgproxy.domestika.org/unsafe/w:1200/rs:fill/plain/src://blog-post-open-graph-covers/000/003/917/3917-original.png?1592159567" alt="Categoria Tintas">
                 <div class="card-info">
                     <h3>Suvinil</h3>
-                    <p>Cores e Acabamentos</p>
+                    <p>Parceria Que Realiza Sonhos</p>
                 </div>
             </a>
             <div class="category-card common-card-styles">
                 <img src="https://dcdn-us.mitiendanube.com/stores/003/317/653/products/tubo-de-agua-tigre61-31fdd20ebfd359223016887535321368-1024-1024.png" alt="Categoria Tigre">
                 <div class="card-info">
-                    <h3>CANOS</h3>
-                    <p>Soluções Hidráulicas</p>
+                    <h3>Experiencias Magicas</h3>
+                    <p>Venha Viver Essa Experiencia Conosco</p>
                 </div>
             </div>
             <div class="category-card common-card-styles">
