--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
                             </ul>
                         </div>
                         <div class="has-submenu">
+                            <a href="#">Tintas<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <ul class="submenu">
+                                <li><a href="#">Suvinil Select</a></li>
+                                <li><a href="#">Tintas Parede</a></li>
+                                <li><a href="#">Madeiras e Metais</a></li>
+                                <li><a href="#">Acessorios</a></li>
+                            </ul>
+                        </div>
+                        <div class="has-submenu">
                             <a href="#">Linha Rezende<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Areia</a></li>
@@ -73,6 +82,7 @@
                                 <li><a href="#">Tubos e Conexões</a></li>
                                 <li><a href="#">Registros e Válvulas</a></li>
                                 <li><a href="#">Bombas D'água</a></li>
+                                <li><a href="#">Linha Tigre Pro</a></li>
                             </ul>
                         </div>
                          <div class="has-submenu">
@@ -83,30 +93,12 @@
                                 <li><a href="#">Silicones e Selantes</a></li>
                                 <li><a href="#">Fitas Adesivas</a></li>
                             </ul>
-                        </div>
-                        <div class="has-submenu">
+                         <div class="has-submenu">
                             <a href="#">Banho e Aquecedores<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Chuveiros</a></li>
                                 <li><a href="#">Aquecedores a Gás</a></li>
                                 <li><a href="#">Aquecedores Elétricos</a></li>
-                            </ul>
-                        </div>
-                        <div class="has-submenu">
-                            <a href="#">Tigre<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
-                            <ul class="submenu">
-                                <li><a href="#">Linha Tigre Pro</a></li>
-                                <li><a href="#">Tubos e Conexões</a></li>
-                            </ul>
-                        </div>
-                        <div class="has-submenu">
-                            <a href="suvinil-produtos.html">Suvinil<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
-                            <ul class="submenu">
-                                <li><a href="suvinil-produtos.html#acrilica">Tintas Select</a></li>
-                                <li><a href="suvinil-produtos.html#latex">Tintas Rende e Cobre Muito</a></li>
-                                <li><a href="suvinil-produtos.html#cores">Cores Personalizadas</a></li>
-                                <li><a href="suvinil-produtos.html#preparacao">Linha Premium</a></li>
-                                <li><a href="suvinil-produtos.html#preparacao">Verniz Madeiras e Metais</a></li>
                             </ul>
                         </div>
                     </div>
