--- a/suvinil-produtos.html
+++ b/suvinil-produtos.html
@@ -38,8 +38,13 @@
                             <a href="#">Descontos <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Ofertas do Dia</a></li>
-                                <li><a href="#">Liquidação</a></li>
-                                <li><a href="#">Cupons</a></li>
+                                <li><a href="#">Promoção</a></li>
+                            </ul>
+                        </div>
+                        <div class="has-submenu">
+                            <a href="#">Decoração <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <ul class="submenu">
+                                <li><a href="#">Metais</a></li>
                             </ul>
                         </div>
                         <div class="has-submenu">
@@ -48,17 +53,14 @@
                                 <li><a href="#">Fios e Cabos</a></li>
                                 <li><a href="#">Tomadas e Interruptores</a></li>
                                 <li><a href="#">Iluminação</a></li>
-                                <li><a href="#">Disjuntores e Quadros</a></li>
-                                <li><a href="#">Ferramentas Elétricas</a></li>
+                                <li><a href="#">Disjuntores e Quadros</a></li>>
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Argamassa<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Massas<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Areia</a></li>
-                                <li><a href="#">Argamassa AC-I</a></li>
-                                <li><a href="#">Argamassa AC-II</a></li>
-                                <li><a href="#">Argamassa AC-III</a></li>
+                                <li><a href="#">Argamassa</a></li>
                                 <li><a href="#">Rejuntes</a></li>
                                 <li><a href="#">Impermeabilizantes</a></li>
                             </ul>
@@ -74,17 +76,17 @@
                         <div class="has-submenu">
                             <a href="#">Hidráulica<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
-                                <li><a href="#">Tubos e Conexões PVC</a></li>
-                                <li><a href="#">Tubos e Conexões Cobre</a></li>
+                                <li><a href="#">Tubos e Conexões</a></li>
+                                <li><a href="#">Chuveiros e Torneiras</a></li>
                                 <li><a href="#">Registros e Válvulas</a></li>
                                 <li><a href="#">Bombas D'água</a></li>
+                                <li><a href="#">Acabamentos</a></li>
                             </ul>
                         </div>
                          <div class="has-submenu">
-                            <a href="#">Adesivos<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Fitas e Colas<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Colas</a></li>
-                                <li><a href="#">Adesivos de Contato</a></li>
                                 <li><a href="#">Silicones e Selantes</a></li>
                                 <li><a href="#">Fitas Adesivas</a></li>
                             </ul>
@@ -99,10 +101,10 @@
                         <div class="has-submenu">
                             <a href="suvinil-produtos.html">Tintas<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
-                                <li><a href="suvinil-produtos.html#acrilica">Tintas Select</a></li>
-                                <li><a href="suvinil-produtos.html#latex">Suvinil</a></li>
+                                <li><a href="suvinil-produtos.html#acrilica">Tintas Suvinil Select</a></li>
+                                <li><a href="suvinil-produtos.html#latex">Linha Premium</a></li>
                                 <li><a href="suvinil-produtos.html#cores">Madeiras e Metais</a></li>
-                                <li><a href="suvinil-produtos.html#preparacao">Linha Premium</a></li>
+                                <li><a href="suvinil-produtos.html#preparacao">Tintas Parede</a></li>
                                 <li><a href="suvinil-produtos.html#preparacao">Acessorios</a></li>
                             </ul>
                         </div>
@@ -125,6 +127,7 @@
                 </ul>
             </div>
         </nav>
+
     </header>
 
     <main>
