--- a/index.html
+++ b/index.html
@@ -35,42 +35,55 @@
                     <div class="departments-dropdown-content" id="departmentsDropdown">
                         <button class="close-departments-button" id="closeDepartmentsBtn"><i class="fa-solid fa-times"></i></button>
                         <div class="has-submenu">
-                            <a href="#">Descontos <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Ofertas <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Ofertas do Dia</a></li>
-                                <li><a href="#">Promoção</a></li>
+                                <li><a href="#">Promoções</a></li>
+                                <li><a href="#">Mais vendidos</a></li>
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Decoração <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Iluminação<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
-                                <li><a href="#">Metais</a></li>
+                                <li><a href="#">Embutidos</a></li>
+                                <li><a href="#">Pendentes</a></li>
+                                <li><a href="#">Lineares</a></li>
+                                <li><a href="#">Fitas</a></li>
+                                <li><a href="#">Lampadas</a></li>
+                                <li><a href="#">Fontes</a></li>
+                                <li><a href="#">Jardim</a></li>
+                                <li><a href="#">Sistemas</a></li>
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Elétrica<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Eletrica<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Fios e Cabos</a></li>
                                 <li><a href="#">Tomadas e Interruptores</a></li>
-                                <li><a href="#">Iluminação</a></li>
-                                <li><a href="#">Disjuntores e Quadros</a></li>>
+                                <li><a href="#">Disjuntores</a></li>
+                                <li><a href="#">Quadros</a></li>
+                                <li><a href="#">Caixas de Passagem</a></li>
+                                <li><a href="#">Tubos e Eletrodutos</a></li>
+                                <li><a href="#">Acessorios e Adaptadores</a></li>
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Massas<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Argamassa<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Areia</a></li>
-                                <li><a href="#">Argamassa</a></li>
+                                <li><a href="#">Armagassas</a></li>
+                                <li><a href="#">Cimentos</a></li>
+                                <li><a href="#">Aditivos</a></li>
                                 <li><a href="#">Rejuntes</a></li>
                                 <li><a href="#">Impermeabilizantes</a></li>
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Linha Rezende<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Louças<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
-                                <li><a href="#">Areia</a></li>
-                                <li><a href="#">Massas</a></li>
-                                <li><a href="#">Tintas e Texturas</a></li>
+                                <li><a href="#">Bacias Sanitários</a></li>
+                                <li><a href="#">Cubas</a></li>
+                                <li><a href="#">Assentos</a></li>
                             </ul>
                         </div>
                         <div class="has-submenu">
@@ -84,7 +97,7 @@
                             </ul>
                         </div>
                          <div class="has-submenu">
-                            <a href="#">Fitas e Colas<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Colas e Fitas<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Colas</a></li>
                                 <li><a href="#">Silicones e Selantes</a></li>
@@ -104,8 +117,30 @@
                                 <li><a href="suvinil-produtos.html#acrilica">Tintas Suvinil Select</a></li>
                                 <li><a href="suvinil-produtos.html#latex">Linha Premium</a></li>
                                 <li><a href="suvinil-produtos.html#cores">Madeiras e Metais</a></li>
-                                <li><a href="suvinil-produtos.html#preparacao">Tintas Parede</a></li>
+                                <li><a href="suvinil-produtos.html#preparacao">Tintas de Parede</a></li>
                                 <li><a href="suvinil-produtos.html#preparacao">Acessorios</a></li>
+                            </ul>
+                        </div>
+                        <div class="has-submenu">
+                            <a href="#">Pisos E Revestimentos<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <ul class="submenu">
+                                <li><a href="#">Porcelanatos</a></li>
+                                <li><a href="#">Ceramicas</a></li>
+                                <li><a href="#">Pisos Vinilicos</a></li>
+                                <li><a href="#">Laminados</a></li>
+                                <li><a href="#">Externos</a></li>
+                            </ul>
+                        </div>
+                        <div class="has-submenu">
+                            <a href="#">Ambientes<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <ul class="submenu">
+                                <li><a href="#">Banheiro</a></li>
+                                <li><a href="#">Cozinha</a></li>
+                                <li><a href="#">Externo</a></li>
+                                <li><a href="#">Quarto</a></li>
+                                <li><a href="#">Sala</a></li>
+                                <li><a href="#">Gourmet</a></li>
+                                <li><a href="#">Area de serviço</a></li>
                             </ul>
                         </div>
                     </div>
@@ -117,13 +152,17 @@
                 </div>
 
                 <ul class="benefits-list">
-                    <li><i class="fa-solid fa-percent"></i><span>Descontos</span></li>
+                    <li><i class="fa-solid fa-percent"></i><span>Ofertas</span></li>
+                    <li><i class="fa-solid fa-lightbulb"></i><span>Iluminação</span></li>
                     <li><i class="fa-solid fa-bolt"></i><span>Elétrica</span></li>
                     <li><i class="fa-solid fa-trowel-bricks"></i><span>Argamassa</span></li>
-                    <li><a href="suvinil-produtos.html"><i class="fa-solid fa-paint-roller"></i><span>Tintas</span></a></li>
+                    <li><i class="fa-solid fa-toilet"></i><span>Louças</span></li>
                     <li><i class="fa-solid fa-faucet"></i><span>Hidráulica</span></li>
                     <li><i class="fa-solid fa-tape"></i><span>Adesivos</span></li>
                     <li><i class="fa-solid fa-fire-burner"></i><span>Aquecedores</span></li>
+                    <li><a href="suvinil-produtos.html"><i class="fa-solid fa-paint-roller"></i><span>Tintas</span></a></li>
+                    <li><i class="fa-solid fa-clone"></i><span>Pisos e Revestimentos</span></li>
+                    <li><i class="fa-solid fa-house"></i><span>Ambientes</span></li>
                 </ul>
             </div>
         </nav>
