--- a/index.html
+++ b/index.html
@@ -87,12 +87,19 @@
                             </ul>
                         </div>
                         <div class="has-submenu">
+                            <a href="#">Metais<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <ul class="submenu">
+                                <li><a href="#">Acabamentos</a></li>
+                                <li><a href="#">Prateleiras</a></li>
+                            </ul>
+                        </div>
+                        <div class="has-submenu">
                             <a href="#">Hidráulica<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Tubos e Conexões</a></li>
                                 <li><a href="#">Chuveiros e Torneiras</a></li>
                                 <li><a href="#">Registros e Válvulas</a></li>
-                                <li><a href="#">Bombas D'água</a></li>
+                                <li><a href="#">Bombas e Caixas D'água</a></li>
                                 <li><a href="#">Acabamentos</a></li>
                             </ul>
                         </div>
@@ -156,6 +163,7 @@
                     <li><i class="fa-solid fa-lightbulb"></i><span>Iluminação</span></li>
                     <li><i class="fa-solid fa-bolt"></i><span>Elétrica</span></li>
                     <li><i class="fa-solid fa-trowel-bricks"></i><span>Argamassa</span></li>
+                    <li><i class="fa-solid fa-toilet"></i><span>Louças</span></li>
                     <li><i class="fa-solid fa-toilet"></i><span>Louças</span></li>
                     <li><i class="fa-solid fa-faucet"></i><span>Hidráulica</span></li>
                     <li><i class="fa-solid fa-tape"></i><span>Adesivos</span></li>
