--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Pisos E Revestimentos<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Pisos e Revestimentos<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Porcelanatos</a></li>
                                 <li><a href="#">Ceramicas</a></li>
@@ -164,10 +164,10 @@
                     <li><i class="fa-solid fa-bolt"></i><span>Elétrica</span></li>
                     <li><i class="fa-solid fa-trowel-bricks"></i><span>Argamassa</span></li>
                     <li><i class="fa-solid fa-toilet"></i><span>Louças</span></li>
-                    <li><i class="fa-solid fa-toilet"></i><span>Louças</span></li>
+                    <li><i class="fa-solid fa-ring"></i><span>Metais</span></li>
                     <li><i class="fa-solid fa-faucet"></i><span>Hidráulica</span></li>
                     <li><i class="fa-solid fa-tape"></i><span>Adesivos</span></li>
-                    <li><i class="fa-solid fa-fire-burner"></i><span>Aquecedores</span></li>
+                    <li><i class="fa-solid fa-hot-tub-person"></i><span>Aquecedores</span></li>
                     <li><a href="suvinil-produtos.html"><i class="fa-solid fa-paint-roller"></i><span>Tintas</span></a></li>
                     <li><i class="fa-solid fa-clone"></i><span>Pisos e Revestimentos</span></li>
                     <li><i class="fa-solid fa-house"></i><span>Ambientes</span></li>
