suvinil-produtos.html

--- a/suvinil-produtos.html
+++ b/suvinil-produtos.html
@@ -129,7 +129,7 @@
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Pisos E Revestimentos<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Pisos e Revestimentos<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Porcelanatos</a></li>
                                 <li><a href="#">Ceramicas</a></li>
